<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- 父聚合工程：统一管理版本、依赖与插件，不产出 jar -->
    <groupId>com.sqxdl</groupId>
    <artifactId>SQXDL</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>SQXDL</name>
    <description>数据库管理系统实训项目（SQXDL）</description>

    <!-- 子模块列表，构建顺序按依赖关系由 Maven 自行拓扑排序 -->
    <!-- storage 已改为独立 C++ 程序（storage_core.exe，见 storage/readme.md），
         不再作为 Maven 模块参与聚合构建 -->
    <modules>
        <module>parser</module>
        <module>semantic</module>
        <module>executor</module>
    </modules>

    <properties>
        <!-- 统一锁定 Java 17 编译级别 -->
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.jupiter.version>5.10.2</junit.jupiter.version>
    </properties>

    <!-- 集中声明依赖版本，子模块引用时不再写 version -->
    <dependencyManagement>
        <dependencies>
            <!-- 内部模块间依赖，版本跟随父工程 -->
            <dependency>
                <groupId>com.sqxdl</groupId>
                <artifactId>sqxdl-parser</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sqxdl</groupId>
                <artifactId>sqxdl-semantic</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!-- 外部依赖 -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.jupiter.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- 所有子模块默认继承 JUnit 测试依赖 -->
    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <!-- 集中声明插件版本，子模块自动继承 -->
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <release>17</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
